--- a/index1.html
+++ b/index1.html
@@ -9,7 +9,8 @@
 <script>
     function layDL() {
         let name = document.getElementById("G").value;
-        console.log(name)
+        console.log(name);
+        alert (name);
     }
 </script>
 
