--- a/index3.html
+++ b/index3.html
@@ -10,11 +10,7 @@
 <br>
 <input type="text" id="B" >
 <br>
-<input type="text" id="C" >
-<br>
-<input type="text" id="D" >
-<br>
-<button onclick="tinhtoan()" id="E" >Ok</button>
-<script src="Iindex3.js"></script>
+<button onclick="tinhtoan()" >Ok</button>
+<script src="index3.js"></script>
 </body>
 </html>
